# djinn

./: .gitignore  djinn-prover.cabal  readme.md
app/: Compile.hs  Display.hs  Library.hs  Main.hs  Parse.hs  Proof.hs  Syntax.hs  Term.hs  Xml.hs
examples/: Eq.do  EqDesc.do  EqRefl.do  EqRw.do  Exists.do  HilbertChoice.do  HilbertChoiceAxiom.do  RelationalChoice.do  conj-intro.xml  conj.xml  double-app.xml  eq-refl.xml  eq.xml  im-triv.xml  style.xml
output/: Eq.xml  EqDesc.xml  EqRefl.xml  EqRw.xml  Exists.xml  Forall.xml  HilbertChoice.xml  HilbertChoiceAxiom.xml  Implies.xml  RelationalChoice.xml
